# R-Type

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Client/: Client.cpp  Client.h  User.cpp  User.hpp  main.cpp
Client/Global/: CGlobal.cpp  CGlobal.h
Client/Network/: CNetwork.cpp  CNetwork.h  Network.cpp  Network.h
Common/JSON/: JSONObject.cpp  JSONObject.h
Common/Network/Request/: CmdAddPlayerPacket.cpp  CmdAddPlayerPacket.hpp  CmdInGamePacket.cpp  CmdInGamePacket.h  CmdLobbyPacket.cpp  CmdLobbyPacket.h  CmdMovePacket.cpp  CmdMovePacket.h  CmdShotPacket.cpp  CmdShotPacket.h  CmdStartGame.cpp  CmdStartGame.h  HelloPacket.cpp  HelloPacket.h  MessagePacket.cpp  MessagePacket.h  Request.h  WelcomePacket.cpp  WelcomePacket.h
Extra/: lvl1.txt
Game/: CMakeLists.txt  main.c  main.cpp
Game/Behaviours/: AnimationBehaviour.cpp  AnimationBehaviour.hpp  BackgroundBehaviour.cpp  BackgroundBehaviour.hpp  BulletBehaviour.cpp  BulletBehaviour.hpp  MonsterBehaviour.cpp  MonsterBehaviour.h  MonsterBonusBehaviour.cpp  MonsterBonusBehaviour.hpp  MonsterBossBehaviour.cpp  MonsterBossBehaviour.h  MonsterIA.h  ObstacleBehaviour.cpp  ObstacleBehaviour.hpp  ObstacleObserver.cpp  ObstacleObserver.hpp  PlayerBehaviour.cpp  PlayerBehaviour.hpp
Game/Core/: Core.cpp  Core.hpp
Game/Entity/: Andromede.cpp  Andromede.hpp  BasicMonster.cpp  BasicMonster.hpp  EnnemyEntity.cpp  EnnemyEntity.hpp  Entity.cpp  Entity.hpp  Pegasus.cpp  Pegasus.hpp  PlayableEntity.cpp  PlayableEntity.hpp
Game/Events/: EventAddPlayer.cpp  EventAddPlayer.hpp  EventMove.cpp  EventMove.hpp  EventShoot.cpp  EventShoot.hpp
Game/Extra/: Game  lvl1.txt  ressources.txt
Game/GameEngine/: CMakeLists.txt  TacosEngine.cpp  TacosEngine.h  TestInput.h  r_type.cpp
Game/GameEngine/Animation/: Animation.cpp  Animation.hpp
Game/GameEngine/AudioComponent/: AudioComponent.hpp
Game/GameEngine/Behaviour/: Behaviour.cpp  Behaviour.h
Game/GameEngine/Collider/: Collider.cpp  Collider.hpp
Game/GameEngine/Component/: Component.cpp
Game/GameEngine/EventManager/: EventManager.cpp  EventManager.hpp
Game/GameEngine/Events/: EventMove.cpp  EventMove.hpp  EventShoot.cpp  EventShoot.hpp
Game/GameEngine/Extra/: Game  GameEngine  ressources.txt
Game/GameEngine/GameObject/: GameObject.cpp
Game/GameEngine/IEvent/: IEvent.hpp
Game/GameEngine/IRenderer/: IRenderer.hpp
Game/GameEngine/Input/: Input.cpp  Input.h
Game/GameEngine/InputManager/: InputManager.h
Game/GameEngine/InputManagerSFML/: InputManagerSFML.cpp  InputManagerSFML.h
Game/GameEngine/LibLoader/: ILibrary.hpp  LibLoader.cpp  LibLoader.hpp  LibLoaderWindows.cpp  LibLoaderWindows.hpp
Game/GameEngine/PhysicsEngine/: PhysicsEngine.cpp  PhysicsEngine.h
Game/GameEngine/RessourceManager/: IAudio.hpp  RessourceManager.cpp  SfmlWindow.hpp  sfmlAudio.cpp  sfmlFont.cpp  sfmlTexture.cpp  sfmlTexture.hpp
Game/GameEngine/Rigidbody/: Rigidbody.hpp
Game/GameEngine/Scene/: Scene.cpp  Scene.hpp
Game/GameEngine/Scene/scene_config/: scene1.json
Game/GameEngine/SfmlRenderer/: SfmlRenderer.cpp  SfmlRenderer.hpp
Game/GameEngine/Sprite/: Sprite.cpp  Sprite.hpp
Game/GameEngine/Text/: Text.cpp  Text.hpp
Game/GameEngine/Transform/: Transform.cpp  Transform.h
Game/GameEngine/Vector2/: Vector2.cpp  Vector2.hpp
Game/Level/: Level.cpp  Level.hpp  SpawnManager.cpp  SpawnManager.h  lvl1.txt
Game/Monster/: test.cpp
Game/Monster/MonsterBasic/: CMakeLists.txt  MonsterBasic.cpp
Game/Monster/MonsterZig/: CMakeLists.txt  MonsterZig.cpp
Game/Monster/png&resources/: ressources.txt
GameEngine/: Behaviour.cpp  CMakeLists.txt  Component.cpp  IRenderer.hpp  InputManagerSFML.h  SfmlWindow.hpp  Sprite.cpp  Sprite.hpp  TacosEngine.cpp  TacosEngine.h  TestInput.h  Vector2.cpp  r_type.cpp  r_type.vcxproj  r_type.vcxproj.filters  sfmlAudio.hpp
GameEngine/Animation/: Animation.cpp  Animation.hpp
GameEngine/AudioComponent/: AudioComponent.cpp  AudioComponent.hpp
GameEngine/Behaviour/: Behaviour.cpp  Behaviour.h
GameEngine/Collider/: Collider.cpp  Collider.hpp
GameEngine/Component/: Component.cpp  Component.hpp
GameEngine/Entity/: Entity.hpp
GameEngine/EventManager/: EventManager.cpp  EventManager.hpp
GameEngine/Events/: EventMove.cpp  EventMove.hpp  EventShoot.cpp  EventShoot.hpp
GameEngine/Extra/: GameEngine  ressources.txt
GameEngine/GameObject/: GameObject.cpp
GameEngine/IEvent/: IEvent.hpp
GameEngine/IRenderer/: IRenderer.hpp
GameEngine/IWindow/: IWindow.hpp
GameEngine/Input/: Input.cpp  Input.h
GameEngine/InputManager/: InputManager.h
GameEngine/InputManagerSFML/: InputManagerSFML.cpp  InputManagerSFML.h
GameEngine/PhysicsEngine/: PhysicsEngine.cpp  PhysicsEngine.h
GameEngine/RessourceManager/: .#init.ressources  IAudio.hpp  IFont.hpp  ITexture.hpp  RessourceManager.cpp  RessourceManager.hpp  SfmlRenderer.cpp  SfmlRenderer.hpp  SfmlWindow.cpp  sfmlAudio.cpp  sfmlAudio.hpp  sfmlFont.cpp  sfmlFont.hpp  sfmlTexture.cpp  sfmlTexture.hpp
GameEngine/Rigidbody/: Rigidbody.cpp  Rigidbody.hpp
GameEngine/Scene/: Scene.cpp  Scene.hpp
GameEngine/SfmlRenderer/: SfmlRenderer.hpp
GameEngine/Sprite/: Sprite.cpp  Sprite.hpp
GameEngine/Transform/: Transform.cpp  Transform.h
GameEngine/Vector2/: Vector2.cpp  Vector2.hpp
GameEngine/cmake_modules/: FindSFML.cmake
Network/: JSONObject.cpp  JSONObject.h
Network/Request/: CmdInGame.cpp  CmdInGame.h  CmdInGamePacket.h  CmdLobbyPacket.cpp  CmdLobbyPacket.h  CmdMovePacket.cpp  CmdMovePacket.h  CmdShotPacket.cpp  MessagePacket.cpp  MessagePacket.h  Request.h  WelcomePacket.cpp  WelcomePacket.h
RessourceManager/: CMakeLists.txt  RessourceManager  RessourceManager.hpp  init.ressources  main.cpp  sfmlAudio.hpp
Server/: Player.cpp  Player.hpp  Room.cpp  Room.hpp  Server.cpp  Server.h  Server.hpp  main.cpp
Server/Global/: Global.cpp  Global.h
Server/Network/: SNetwork.cpp  SNetwork.h
Server/Room/: Room.cpp  Room.h  RoomManager.cpp  RoomManager.h
Server/User/: User.cpp  User.h
cmake_modules/: FindSFML.cmake
