cmake_minimum_required(VERSION 3.9)
project(R_Type)

set(CMAKE_CXX_STANDARD 11)

add_executable(R_Type
        Client/Network/CNetwork.cpp
        Client/Network/CNetwork.h
        Client/Client.cpp
        Client/Client.h
        Client/main.cpp
        Common/JSON/json.hpp
        Common/JSON/JSONObject.cpp
        Common/JSON/JSONObject.h
        Common/Network/Request/CmdInGamePacket.cpp
        Common/Network/Request/CmdInGamePacket.h
        Common/Network/Request/CmdLobbyPacket.cpp
        Common/Network/Request/CmdLobbyPacket.h
        Common/Network/Request/CmdMovePacket.cpp
        Common/Network/Request/CmdMovePacket.h
        Common/Network/Request/CmdShotPacket.cpp
        Common/Network/Request/CmdShotPacket.h
        Common/Network/Request/MessagePacket.cpp
        Common/Network/Request/MessagePacket.h
        Common/Network/Request/Request.h
        Common/Network/Request/WelcomePacket.cpp
        Common/Network/Request/WelcomePacket.h
        GameEngine/Behaviour/Behaviour.cpp
        GameEngine/Behaviour/Behaviour.h
        GameEngine/Component/Component.cpp
        GameEngine/Component/Component.hpp
        GameEngine/Entity/Entity.hpp
        GameEngine/IEvent/IEvent.hpp
        GameEngine/Input/Input.cpp
        GameEngine/Input/Input.h
        GameEngine/InputManager/InputManager.h
        GameEngine/InputManagerSFML/InputManagerSFML.cpp
        GameEngine/InputManagerSFML/InputManagerSFML.h
        GameEngine/IRenderer/IRenderer.hpp
        GameEngine/IWindow/IWindow.hpp
        GameEngine/PhysicsEngine/PhysicsEngine.cpp
        GameEngine/PhysicsEngine/PhysicsEngine.h
        GameEngine/RessourceManager/IAudio.hpp
        GameEngine/RessourceManager/IFont.hpp
        GameEngine/RessourceManager/ITexture.hpp
        GameEngine/RessourceManager/main.cpp
        GameEngine/RessourceManager/RessourceManager.cpp
        GameEngine/RessourceManager/RessourceManager.hpp
        GameEngine/RessourceManager/sfmlAudio.cpp
        GameEngine/RessourceManager/sfmlAudio.hpp
        GameEngine/RessourceManager/sfmlFont.cpp
        GameEngine/RessourceManager/sfmlFont.hpp
        GameEngine/RessourceManager/SfmlRenderer.cpp
        GameEngine/RessourceManager/SfmlRenderer.hpp
        GameEngine/RessourceManager/sfmlTexture.cpp
        GameEngine/RessourceManager/sfmlTexture.hpp
        GameEngine/RessourceManager/SfmlWindow.cpp
        GameEngine/RessourceManager/SfmlWindow.hpp
        GameEngine/Scene/Scene.cpp
        GameEngine/Scene/Scene.hpp
        GameEngine/Sprite/Sprite.cpp
        GameEngine/Sprite/Sprite.hpp
        GameEngine/Transform/Transform.cpp
        GameEngine/Transform/Transform.h
        GameEngine/Vector2/Vector2.cpp
        GameEngine/Vector2/Vector2.hpp
        GameEngine/r_type.cpp
        GameEngine/TacosEngine.cpp
        GameEngine/TacosEngine.h
        GameEngine/TestInput.h
        Server/Global/Global.cpp
        Server/Global/Global.h
        Server/Network/SNetwork.cpp
        Server/Network/SNetwork.h
        Server/Room/Room.cpp
        Server/Room/Room.h
        Server/User/User.cpp
        Server/User/User.h
        Server/main.cpp
        Server/Server.cpp
        Server/Server.h)
